<resources>
    <string name="app_name">Multicast</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign-Up?</string>
    <string name="have_an_account_sign_in">Have an account? Sign-In?</string>
    <string name="register">Register</string>
    <string name="email">Your email</string>
    <string name="user_name">User name</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_group_view">GroupViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_in">LOG IN</string>
    <string name="register_2">REGISTER</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
