<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn_Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="170dp"
        android:text="Register"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="230dp"
        android:autofillHints=""
        android:inputType="text"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/rectangle_2"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/rectangle_2" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="370dp"
        android:autofillHints=""
        android:inputType="textPassword"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/rectangle_2" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_marginTop="440dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/rectangle_1" />

    <TextView
        android:id="@+id/tvToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account_sign_in"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="140dp"
        android:layout_centerInParent="true"/>

</RelativeLayout>